// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Equation Functions - Bar Bottom Strike 1`] = `
Array [
  0.7,
  0,
  0,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Bar Bottom Strike 2`] = `
Array [
  0.35,
  0,
  0.007,
  0,
  0.35,
  -0.1246,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Bar Bottom Strike 3`] = `
Array [
  0.028,
  0,
  0,
  0,
  0.0721,
  -0.0056,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Bar Top Strike 1`] = `
Array [
  0.7,
  0,
  0,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Bar Top Strike 2`] = `
Array [
  0.35,
  0,
  0.007,
  0,
  0.35,
  0.1393,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Bar Top Strike 3`] = `
Array [
  0.028,
  0,
  0,
  0,
  0.0721,
  -0.0056,
  0,
  0,
  1,
]
`;
